udpate pd datetime

--- a/data/pandas_tute/10min.ipynb
+++ b/data/pandas_tute/10min.ipynb
@@ -4586,7 +4586,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# recode a column using case when\n",
+    "titanic[\"new_town\"] = np.where(\n",
+    "    titanic[\"embark_town\"].isin([\"Queenstown\", \"Southampton\"]), \"Q&S\", \"other\"\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "code",
