udpate formula in md

--- a/math_scripts/formulas/formulas_in_md.ipynb
+++ b/math_scripts/formulas/formulas_in_md.ipynb
@@ -212,7 +212,9 @@
     "\n",
     "$$g(E(Y)) = \\eta$$\n",
     "\n",
-    "$$g(E(Y)) = \\ln\\left(\\frac{E(Y)}{1 - E(Y)}\\right) = \\eta$$"
+    "$$g(E(Y)) = \\ln\\left(\\frac{E(Y)}{1 - E(Y)}\\right) = \\eta$$\n",
+    "\n",
+    "$$g(E(Y)) = \\ln(\\frac{E(Y)}{1 - E(Y)}) = \\eta$$"
    ]
   },
   {
@@ -232,6 +234,12 @@
     "$$Var[X] = E[(X - E[X])^2] = E[X^2] - (E[X])^2$$\n",
     "\n",
     "$$Skewness[X] = E\\left[\\left(\\frac{X - E[X]}{\\sqrt{Var[X]}}\\right)^3\\right]$$\n",
+    "\n",
+    "distribution\n",
+    "\n",
+    "`$$X \\sim N(0,\\sigma)$$`\n",
+    "\n",
+    "$$X \\sim N(0,\\sigma)$$\n",
     "\n",
     "normal pdf\n",
     "\n",
