--- a/model/credit/woe.ipynb
+++ b/model/credit/woe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mydata = pd.read_csv(\"https://stats.idre.ucla.edu/stat/data/binary.csv\")"
+    "mydata = pd.read_csv(\"https://stats.idre.ucla.edu/stat/data/binary.csv\")\n",
+    "mydata.to_csv(\"binary.csv\", index=False)"
    ]
   },
   {
@@ -821,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
