--- a/model/credit/score_card.ipynb
+++ b/model/credit/score_card.ipynb
@@ -219,7 +219,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# encode categorical variables\n",
+    "cat_cols = X_train.select_dtypes([object, \"category\", bool]).columns\n",
+    "\n",
+    "encoder = ce.WOEEncoder(cols=cat_cols)\n",
+    "encoder.fit(X_train[cat_cols], y_train)\n",
+    "\n",
+    "X_train[cat_cols] = encoder.transform(X_train[cat_cols])\n",
+    "X_test[cat_cols] = encoder.transform(X_test[cat_cols])\n",
+    "\n",
+    "X_train.head()\n",
+    "X_test.head()"
+   ]
   },
   {
    "cell_type": "code",
