--- a/data/str_regexp_tute/f_str.ipynb
+++ b/data/str_regexp_tute/f_str.ipynb
@@ -645,6 +645,47 @@
     "# right align\n",
     "f\"abc {'aaa':>10s} def\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b9bacf",
+   "metadata": {},
+   "source": [
+    "### date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "134a4bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "823b11d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-02-17 22:01:19'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"{now:%Y-%m-%d %H:%M:%S}\""
+   ]
   }
  ],
  "metadata": {
