Add image opacity change functionality

--- a/general_applic/media/pil_script.ipynb
+++ b/general_applic/media/pil_script.ipynb
@@ -1,31 +1,139 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### experiment"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# png to jpg conversion using PIL library\n",
-    "input = r\"E:\\example.png\"\n",
-    "output = r\"E:\\example.jpg\"\n",
+    "input = r\"E:\\wallpaper\\example.png\"\n",
+    "output = r\"E:\\wallpaper\\example_opacity.png\"\n",
     "\n",
     "from PIL import Image\n",
+    "import numpy as np\n",
     "\n",
-    "im = Image.open(input)\n",
-    "rgb_im = im.convert(\"RGB\")\n",
-    "rgb_im.save(output)\n",
+    "img = Image.open(input).convert(\"RGBA\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2520, 1440)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1440, 2520, 4)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pixels = np.array(img)\n",
+    "pixels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[197, 220, 255, 255],\n",
+       "        [197, 220, 255, 255],\n",
+       "        [197, 220, 255, 255]],\n",
+       "\n",
+       "       [[197, 220, 255, 255],\n",
+       "        [197, 220, 255, 255],\n",
+       "        [197, 220, 255, 255]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pixels[:2,:3,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pixels[:,:,3] = pixels[:,:,3] * 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.fromarray(pixels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img.save(output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# change opacity of an image\n",
     "from PIL import Image\n",
+    "import numpy as np\n",
     "\n",
     "def change_opacity(image_path, output_path, opacity):\n",
     "    \"\"\"Change opacity of an image\n",
@@ -36,19 +144,59 @@
     "    -------\n",
     "    ::\n",
     "        change_opacity(\n",
-    "            image_path=\"E:/wallpaper/exmale.png\", \n",
-    "            output_path=\"E:/example_opacity.png\", \n",
+    "            image_path=\"E:/wallpaper/example.png\", \n",
+    "            output_path=\"E:/wallpaper/example_opacity.png\", \n",
     "            opacity=0.1\n",
     "        )\n",
     "    \"\"\"\n",
     "    img = Image.open(image_path).convert(\"RGBA\")\n",
     "    \n",
-    "    for y in range(img.size[1]):\n",
-    "        for x in range(img.size[0]):\n",
-    "            r, g, b, a = img.getpixel((x, y))\n",
-    "            img.putpixel((x, y), (r, g, b, int(a * opacity)))\n",
+    "    pixels = np.array(img)\n",
+    "    pixels[:,:,3] = pixels[:,:,3] * opacity\n",
+    "    img = Image.fromarray(pixels)\n",
     "\n",
     "    img.save(output_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "change_opacity(\n",
+    "    image_path=\"E:/wallpaper/example.png\", \n",
+    "    output_path=\"E:/wallpaper/example_opacity.png\", \n",
+    "    opacity=0.1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "image_files = Path(\"E:/wallpaper\").glob(\"res007*training.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in Path(\"E:/wallpaper\").glob(\"*_0.1.png\"):\n",
+    "#     i.unlink()"
    ]
   },
   {
@@ -57,16 +205,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [\n",
-    "\n",
-    "]\n",
-    "\n",
-    "for file in files:\n",
+    "opacity=0.5\n",
+    "for file in image_files:\n",
     "    print(file)\n",
+    "    new_file = Path(\"E:opacity\") / f\"{file.stem}_opa_{str(opacity).replace(\".\",\"\")}.png\"\n",
     "    change_opacity(\n",
-    "        image_path=r\"E:\\wallpaper\\{}\".format(file), \n",
-    "        output_path=r\"E:\\opacity\\{}\".format(file), \n",
-    "        opacity=0.1\n",
+    "        image_path=file.as_posix(), \n",
+    "        output_path=new_file.as_posix(),\n",
+    "        opacity=opacity\n",
     "    )"
    ]
   },
