--- a/math_scripts/np_related/basics.ipynb
+++ b/math_scripts/np_related/basics.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(0) # seed for reproducibility\n",
-    "x1 = np.random.randint(10, size=6) # One-dimensional array\n",
-    "x2 = np.random.randint(10, size=(3, 4)) # Two-dimensional array\n",
-    "x3 = np.random.randint(10, size=(3, 4, 5)) # Three-dimensional array"
+    "np.random.seed(0)  # seed for reproducibility\n",
+    "x1 = np.random.randint(10, size=6)  # One-dimensional array\n",
+    "x2 = np.random.randint(10, size=(3, 4))  # Two-dimensional array\n",
+    "x3 = np.random.randint(10, size=(3, 4, 5))  # Three-dimensional array"
    ]
   },
   {
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "x3[0,0]"
+    "x3[0, 0]"
    ]
   },
   {
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "x3[0,1]"
+    "x3[0, 1]"
    ]
   },
   {
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "x3[0,-1]"
+    "x3[0, -1]"
    ]
   },
   {
@@ -170,9 +170,9 @@
     }
    ],
    "source": [
-    "print(x3[0,1,2])\n",
-    "x3[0,1,2] = 3.14159# this will be truncated!\n",
-    "print(x3[0,1,2])"
+    "print(x3[0, 1, 2])\n",
+    "x3[0, 1, 2] = 3.14159  # this will be truncated!\n",
+    "print(x3[0, 1, 2])"
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +193,14 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x1 = np.arange(10)\n",
-    "x1\n"
+    "x1"
    ]
   },
   {
@@ -392,24 +392,402 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 5, 2, 4])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[0, :]  # first row of x2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 7, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[:, 0]  # first column of x2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 5, 2, 4])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[0]  # equivalent to x2[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 5]\n",
+      " [7 6]]\n",
+      "[[99  5  2  4]\n",
+      " [ 7  6  8  8]\n",
+      " [ 1  6  7  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# no copy views\n",
+    "x2_sub = x2[:2, :2]\n",
+    "print(x2_sub)\n",
+    "x2_sub[0, 0] = 99\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[42  5]\n",
+      " [ 7  6]]\n",
+      "[[99  5  2  4]\n",
+      " [ 7  6  8  8]\n",
+      " [ 1  6  7  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x2_copy = x2[:2, :2].copy()\n",
+    "x2_copy[0, 0] = 42\n",
+    "print(x2_copy)\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = np.zeros(10).reshape((10, 1))\n",
+    "print(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.array([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[np.newaxis, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:, np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### concatenation of arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 3, 2, 1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, 3])\n",
+    "y = np.array([3, 2, 1])\n",
+    "np.concatenate([x, y])# same dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 1, 2, 3],\n",
+       "       [4, 5, 6, 4, 5, 6]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "np.concatenate([grid, grid], axis=1) # same dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [9, 8, 7],\n",
+       "       [6, 5, 4]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, 3])\n",
+    "grid = np.array([[9, 8, 7], [6, 5, 4]])\n",
+    "# vertically stack the arrays\n",
+    "np.vstack([x, grid])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9,  8,  7, 99],\n",
+       "       [ 6,  5,  4, 99]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# horizontally stack the arrays\n",
+    "y = np.array([[99], [99]])\n",
+    "np.hstack([grid, y])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### spliting arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3] [99 99] [3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, 99, 99, 3, 2, 1]\n",
+    "x1, x2, x3 = np.split(x, [3, 5])\n",
+    "print(x1, x2, x3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = np.arange(16).reshape((4, 4))\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n",
+      "[[ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "upper, lower = np.vsplit(grid, [2])\n",
+    "print(upper)\n",
+    "print(lower)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1]\n",
+      " [ 4  5]\n",
+      " [ 8  9]\n",
+      " [12 13]]\n",
+      "[[ 2  3]\n",
+      " [ 6  7]\n",
+      " [10 11]\n",
+      " [14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "left, right = np.hsplit(grid, [2])\n",
+    "print(left)\n",
+    "print(right)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -435,7 +813,6 @@
     }
    ],
    "source": [
-    "\n",
     "x1 = np.random.randint(10, size=1_000_000_000)\n",
     "np.sum(x1)"
    ]
@@ -457,7 +834,7 @@
     }
    ],
    "source": [
-    "x1.nbytes/1e6 # in MB"
+    "x1.nbytes / 1e6  # in MB"
    ]
   }
  ],
