--- a/math_scripts/np_related/broadcast.ipynb
+++ b/math_scripts/np_related/broadcast.ipynb
@@ -219,6 +219,245 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### new axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(6).reshape((3, 2))\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1],\n",
+       "        [ 2,  3],\n",
+       "        [ 4,  5]],\n",
+       "\n",
+       "       [[ 6,  7],\n",
+       "        [ 8,  9],\n",
+       "        [10, 11]],\n",
+       "\n",
+       "       [[12, 13],\n",
+       "        [14, 15],\n",
+       "        [16, 17]]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3 = np.arange(18).reshape((3, 3, 2))\n",
+    "x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0],\n",
+       "        [1]],\n",
+       "\n",
+       "       [[2],\n",
+       "        [3]],\n",
+       "\n",
+       "       [[4],\n",
+       "        [5]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ = x[:, :, np.newaxis]\n",
+    "print(_.shape)\n",
+    "_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1]],\n",
+       "\n",
+       "       [[2, 3]],\n",
+       "\n",
+       "       [[4, 5]]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ = x[:, np.newaxis, :]\n",
+    "print(_.shape)\n",
+    "_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 1.],\n",
+       "        [0., 1.],\n",
+       "        [0., 1.]],\n",
+       "\n",
+       "       [[2., 3.],\n",
+       "        [2., 3.],\n",
+       "        [2., 3.]],\n",
+       "\n",
+       "       [[4., 5.],\n",
+       "        [4., 5.],\n",
+       "        [4., 5.]]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_2 = _ + np.zeros((3,1))\n",
+    "print(_2.shape)\n",
+    "_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1],\n",
+       "        [2, 3],\n",
+       "        [4, 5]]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ = x[np.newaxis, :, :]\n",
+    "print(_.shape)\n",
+    "_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 1.],\n",
+       "        [2., 3.],\n",
+       "        [4., 5.]],\n",
+       "\n",
+       "       [[0., 1.],\n",
+       "        [2., 3.],\n",
+       "        [4., 5.]],\n",
+       "\n",
+       "       [[0., 1.],\n",
+       "        [2., 3.],\n",
+       "        [4., 5.]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_2 = _ + np.zeros((3,1,1))\n",
+    "print(_2.shape)\n",
+    "_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### not compatible"
    ]
   },
