--- a/data/pandas_tute/agg_group/agg_and_group.ipynb
+++ b/data/pandas_tute/agg_group/agg_and_group.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,437 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            method  number  orbital_period   mass  distance  year\n",
+      "0  Radial Velocity       1         269.300   7.10     77.40  2006\n",
+      "1  Radial Velocity       1         874.774   2.21     56.95  2008\n",
+      "2  Radial Velocity       1         763.000   2.60     19.84  2011\n",
+      "3  Radial Velocity       1         326.030  19.40    110.62  2007\n",
+      "4  Radial Velocity       1         516.220  10.50    119.47  2009\n",
+      "(1035, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = sns.load_dataset(\"planets\")\n",
+    "print(planets.head())\n",
+    "print(planets.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>orbital_period</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>498.00000</td>\n",
+       "      <td>498.000000</td>\n",
+       "      <td>498.000000</td>\n",
+       "      <td>498.000000</td>\n",
+       "      <td>498.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.73494</td>\n",
+       "      <td>835.778671</td>\n",
+       "      <td>2.509320</td>\n",
+       "      <td>52.068213</td>\n",
+       "      <td>2007.377510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.17572</td>\n",
+       "      <td>1469.128259</td>\n",
+       "      <td>3.636274</td>\n",
+       "      <td>46.596041</td>\n",
+       "      <td>4.167284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.328300</td>\n",
+       "      <td>0.003600</td>\n",
+       "      <td>1.350000</td>\n",
+       "      <td>1989.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>38.272250</td>\n",
+       "      <td>0.212500</td>\n",
+       "      <td>24.497500</td>\n",
+       "      <td>2005.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>357.000000</td>\n",
+       "      <td>1.245000</td>\n",
+       "      <td>39.940000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>999.600000</td>\n",
+       "      <td>2.867500</td>\n",
+       "      <td>59.332500</td>\n",
+       "      <td>2011.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.00000</td>\n",
+       "      <td>17337.500000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>354.000000</td>\n",
+       "      <td>2014.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          number  orbital_period        mass    distance         year\n",
+       "count  498.00000      498.000000  498.000000  498.000000   498.000000\n",
+       "mean     1.73494      835.778671    2.509320   52.068213  2007.377510\n",
+       "std      1.17572     1469.128259    3.636274   46.596041     4.167284\n",
+       "min      1.00000        1.328300    0.003600    1.350000  1989.000000\n",
+       "25%      1.00000       38.272250    0.212500   24.497500  2005.000000\n",
+       "50%      1.00000      357.000000    1.245000   39.940000  2009.000000\n",
+       "75%      2.00000      999.600000    2.867500   59.332500  2011.000000\n",
+       "max      6.00000    17337.500000   25.000000  354.000000  2014.000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.dropna().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "733.1164929404421"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets[\"distance\"].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "318.10088545240666"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean absolute deviation\n",
+    "np.sum((planets[\"distance\"] - planets[\"distance\"].mean()).abs()) / planets[\n",
+    "    \"distance\"\n",
+    "].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "733.1164929404421"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# root mean squared deviation\n",
+    "_ = np.sum((planets[\"distance\"] - planets[\"distance\"].mean()).pow(2)) / (\n",
+    "    planets[\"distance\"].count() - 1\n",
+    ")\n",
+    "np.sqrt(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### split, apply, combine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  key  data\n",
+      "0   A     0\n",
+      "1   B     1\n",
+      "2   C     2\n",
+      "3   A     3\n",
+      "4   B     4\n",
+      "5   C     5\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(\n",
+    "    {\"key\": [\"A\", \"B\", \"C\", \"A\", \"B\", \"C\"], \"data\": range(6)}, columns=[\"key\", \"data\"]\n",
+    ")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000021C1AACC500>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"key\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg\n",
+      "aggregate\n",
+      "all\n",
+      "any\n",
+      "apply\n",
+      "bfill\n",
+      "boxplot\n",
+      "corr\n",
+      "corrwith\n",
+      "count\n",
+      "cov\n",
+      "cumcount\n",
+      "cummax\n",
+      "cummin\n",
+      "cumprod\n",
+      "cumsum\n",
+      "data\n",
+      "describe\n",
+      "diff\n",
+      "dtypes\n",
+      "ewm\n",
+      "expanding\n",
+      "ffill\n",
+      "fillna\n",
+      "filter\n",
+      "first\n",
+      "get_group\n",
+      "groups\n",
+      "head\n",
+      "hist\n",
+      "idxmax\n",
+      "idxmin\n",
+      "indices\n",
+      "key\n",
+      "last\n",
+      "max\n",
+      "mean\n",
+      "median\n",
+      "min\n",
+      "ndim\n",
+      "ngroup\n",
+      "ngroups\n",
+      "nth\n",
+      "nunique\n",
+      "ohlc\n",
+      "pct_change\n",
+      "pipe\n",
+      "plot\n",
+      "prod\n",
+      "quantile\n",
+      "rank\n",
+      "resample\n",
+      "rolling\n",
+      "sample\n",
+      "sem\n",
+      "shift\n",
+      "size\n",
+      "skew\n",
+      "std\n",
+      "sum\n",
+      "tail\n",
+      "take\n",
+      "transform\n",
+      "value_counts\n",
+      "var\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.groupby(\"key\").__dir__():\n",
+    "    if not i.startswith(\"_\"):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     data\n",
+       "key      \n",
+       "A       3\n",
+       "B       5\n",
+       "C       7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.groupby(\"key\").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -51,36 +482,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### split, apply, combine"
+    "### aggregate, filter, transform, apply"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
